# dynamodb-simple

./: .gitignore  .travis.yml  LICENSE  README.md  changelog.md  dynamodb-generic.cabal  dynamodb-simple.cabal  stack.yaml
examples/dynamodb-test/: Main.hs  Schema.hs  dynamodb-test.cabal  stack.yaml
src/Control/Monad/: Supply.hs
src/Database/: DynamoDB.hs  DynamoDb.hs
src/Database/DynamoDB/: BatchRequest.hs  Class.hs  Filter.hs  Internal.hs  Migration.hs  QueryRequest.hs  TH.hs  THContains.hs  THConvert.hs  THLens.hs  Types.hs  Update.hs
src/Database/DynamoDb/: Class.hs  Filter.hs  Internal.hs  Migration.hs  TH.hs  Types.hs  Update.hs
test/: BaseSpec.hs  NestedSpec.hs
