name:                dynamodb-generic
version:             0.1.0.0
synopsis:            Helper utilities for working with DynamoDB database
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ondrej Palkovsky
maintainer:          palkovsky.ondrej@gmail.com
copyright:           Ondrej Palkovsky
category:            Database
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Database.DynamoDb
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <5, amazonka-dynamodb, generics-sop,
                       unordered-containers, text, lens, double-conversion,
                       semigroups
                       -- semigroups - kvuli Data.List.NonEmpty, v GHC8 uz neni potreba
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns
