name:                dynamodb-generic
version:             0.1.0.0
synopsis:            Framework for working with DynamoDB database
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ondrej Palkovsky
maintainer:          palkovsky.ondrej@gmail.com
copyright:           Ondrej Palkovsky
category:            Database
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Database.DynamoDb, Database.DynamoDb.Types,
                       Database.DynamoDb.Filter, Database.DynamoDb.TH
  other-modules:       Database.DynamoDb.Class, Database.DynamoDb.Migration
  -- other-extensions:
  build-depends:       base >=4.8 && <5, amazonka-dynamodb, generics-sop,
                       unordered-containers, text, lens, double-conversion,
                       semigroups, bytestring, containers, monad-supply,
                       template-haskell, transformers, exceptions,
                       amazonka, monad-loops, conduit
                       -- semigroups - kvuli Data.List.NonEmpty, v GHC8 uz neni potreba
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns
