name:                dynamodb-simple
version:             0.1.0.0
synopsis:            Typesafe library for working with DynamoDB database
description:         Framework for accessing DynamoDB database. The majority of AWS API
                     is available to the user in a convenient, simple and typesafe manner.
license:             BSD3
license-file:        LICENSE
author:              Ondrej Palkovsky
maintainer:          palkovsky.ondrej@gmail.com
copyright:           Ondrej Palkovsky
homepage:            https://github.com/ondrap/dynamodb-simple
bug-reports:         https://github.com/ondrap/dynamodb-simple/issues
category:            Database
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/ondrap/dynamodb-simple.git

library
  exposed-modules:     Database.DynamoDb, Database.DynamoDb.Types,
                       Database.DynamoDb.Filter, Database.DynamoDb.TH,
                       Database.DynamoDb.Update
  other-modules:       Database.DynamoDb.Class, Database.DynamoDb.Migration
  -- other-extensions:
  build-depends:       base >=4.8 && <5, amazonka-dynamodb, generics-sop,
                       unordered-containers, text, lens, double-conversion,
                       semigroups, bytestring, containers, monad-supply,
                       template-haskell, transformers, exceptions,
                       amazonka, monad-loops, conduit, hashable
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns
