name:                dynamodb-test
version:             0.1.0.0
synopsis:            Test app for dynamodb-simple
license:             BSD3
license-file:        LICENSE
author:              Ondrej Palkovsky
maintainer:          palkovsky.ondrej@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable dynamodb-test
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <5,
                       dynamodb-simple, amazonka, bytestring, text, uuid, transformers,
                       containers, lens, semigroups, conduit, unordered-containers,
                       amazonka-dynamodb, tagged, time, scientific
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns
